--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@ out/
 
 # Temporary files
 tmp/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# Virtual environment
+venv/
+env/
